--- a/Quimera/Quimera.vcxproj
+++ b/Quimera/Quimera.vcxproj
@@ -73,11 +73,11 @@
   <PropertyGroup />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>
-      </PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PrecompiledHeaderFile />
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -132,16 +132,24 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Acao.h" />
+    <ClInclude Include="Agente.h" />
+    <ClInclude Include="Ambiente.h" />
     <ClInclude Include="Condicao.h" />
+    <ClInclude Include="CondicaoAmbiente.h" />
     <ClInclude Include="CondicaoE.h" />
     <ClInclude Include="CondicaoNao.h" />
     <ClInclude Include="CondicaoOu.h" />
+    <ClInclude Include="Controle.h" />
     <ClInclude Include="EntreCondicao.h" />
     <ClInclude Include="Estado.h" />
     <ClInclude Include="MaquinaDeEstadosFinitos.h" />
+    <ClInclude Include="Quimera.h" />
     <ClInclude Include="Transicao.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Agente.cpp" />
+    <ClCompile Include="Ambiente.cpp" />
+    <ClCompile Include="CondicaoAmbiente.cpp" />
     <ClCompile Include="CondicaoE.cpp" />
     <ClCompile Include="CondicaoNao.cpp" />
     <ClCompile Include="CondicaoOu.cpp" />
