--- a/Quimera/Quimera.vcxproj.filters
+++ b/Quimera/Quimera.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="MaquinaDeEstadosHierarquica.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
+    <ClInclude Include="EstadoSubMaquina.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Estado.cpp">
@@ -105,6 +108,9 @@
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
     <ClCompile Include="MaquinaDeEstadosHierarquica.cpp">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
+    <ClCompile Include="EstadoSubMaquina.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
   </ItemGroup>
