--- a/Quimera/Quimera.vcxproj
+++ b/Quimera/Quimera.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="Acao.h" />
     <ClInclude Include="Agente.h" />
     <ClInclude Include="Ambiente.h" />
+    <ClInclude Include="Aresta.h" />
     <ClInclude Include="Condicao.h" />
     <ClInclude Include="CondicaoAmbiente.h" />
     <ClInclude Include="CondicaoE.h" />
@@ -143,15 +144,19 @@
     <ClInclude Include="EntreCondicao.h" />
     <ClInclude Include="Estado.h" />
     <ClInclude Include="EstadoSubMaquina.h" />
+    <ClInclude Include="Grafo.h" />
     <ClInclude Include="HierarquiaBase.h" />
     <ClInclude Include="MaquinaDeEstadosFinitos.h" />
     <ClInclude Include="MaquinaDeEstadosHierarquica.h" />
+    <ClInclude Include="Nodo.h" />
+    <ClInclude Include="NodoNav.h" />
     <ClInclude Include="Quimera.h" />
     <ClInclude Include="Transicao.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Agente.cpp" />
     <ClCompile Include="Ambiente.cpp" />
+    <ClCompile Include="Aresta.cpp" />
     <ClCompile Include="CondicaoAmbiente.cpp" />
     <ClCompile Include="CondicaoE.cpp" />
     <ClCompile Include="CondicaoNao.cpp" />
@@ -161,6 +166,7 @@
     <ClCompile Include="HierarquiaBase.cpp" />
     <ClCompile Include="MaquinaDeEstadosFinitos.cpp" />
     <ClCompile Include="MaquinaDeEstadosHierarquica.cpp" />
+    <ClCompile Include="Nodo.cpp" />
     <ClCompile Include="Transicao.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
