Melhorias no grafo (Nodo)

--- a/Quimera/Quimera.vcxproj
+++ b/Quimera/Quimera.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="AgenteMovel.h" />
     <ClInclude Include="Ambiente.h" />
     <ClInclude Include="Aresta.h" />
+    <ClInclude Include="Comando.h" />
     <ClInclude Include="Condicao.h" />
     <ClInclude Include="CondicaoAmbiente.h" />
     <ClInclude Include="CondicaoE.h" />
@@ -152,9 +153,10 @@
     <ClInclude Include="MaquinaDeEstadosHierarquica.h" />
     <ClInclude Include="Matriz3x3.h" />
     <ClInclude Include="Nodo.h" />
-    <ClInclude Include="NodoNav.h" />
+    <ClInclude Include="Problema.h" />
     <ClInclude Include="Quimera.h" />
     <ClInclude Include="Seek.h" />
+    <ClInclude Include="Solucao.h" />
     <ClInclude Include="Steering.h" />
     <ClInclude Include="Transicao.h" />
     <ClInclude Include="Vetor2D.h" />
@@ -175,8 +177,8 @@
     <ClCompile Include="MaquinaDeEstadosFinitos.cpp" />
     <ClCompile Include="MaquinaDeEstadosHierarquica.cpp" />
     <ClCompile Include="Matriz3x3.cpp" />
-    <ClCompile Include="Nodo.cpp" />
     <ClCompile Include="Seek.cpp" />
+    <ClCompile Include="Solucao.cpp" />
     <ClCompile Include="Steering.cpp" />
     <ClCompile Include="Transicao.cpp" />
     <ClCompile Include="Vetor2D.cpp" />
